2005-08-11  Jan Nieuwenhuizen  <janneke@gnu.org>

	* mf/GNUmakefile (get-*-fonts): Rename from get-*-pfa.  Copy SVG
	too.

	* Documentation/topdocs/NEWS.tely (Top): Add slur script feature.

	* lily/lily-guile.cc (parse_symbol_list): Rewrite.  Grok multiple
	whitespace as symbol separator.

	* lily/side-position-interface.cc: Add slur-padding.

	* input/regression/slur-script.ly: Fixed.  Backportme?  This is
	quite a large fix, and it never worked in a stable release; so not
	really a regression.

	* lily/phrasing-slur-engraver.cc (class Phrasing_slur_engraver):
	Update cut and paste code from Slur_engraver.

	* scm/define-grob-interfaces.scm (dynamic-line-spanner-interface):
	Add.

	* scm/define-grobs.scm (DynamicLineSpanner): Add
	dynamic-line-spanner-interface.
	(DynamicLineSpanner, TextScript, Fingering): Add slur-padding.

2005-08-09  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/slur-engraver.cc (acknowledge_extra_object): Bugfix: use
	to_boolean () so that non-set 'inside-slur means false.

	* lily/slur.cc (outside_slur_callback): Bugfixes: make sure that
	slur has control-points.  Skip script without direction.  Always
	do_shift if script inside slur, even if slur not contained in
	script y-extent.  Increment k in loop.

2005-08-11  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* scm/define-markup-commands.scm: Improved regexp to search for
	EPS bounding boxes and corrected call to ly:warning.

2005-08-10  Nicolas Sceaux  <nicolas.sceaux@free.fr>

	* Documentation/user/programming-interface.itely (Displaying music
	expressions): doc for \displayLilyMusic. Also some precisions in
	"Markup construction in Scheme"

2005-08-10  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* scm/define-markup-commands.scm (normal-text): Added 2 new
	markup commands, \normal-text and \medium (the latter thanks to
	Bruce Fairchild). 

2005-08-08  Graham Percival  <gpermus@gmail.com>

	* Documentation/user/programming-interface.itely: fix @{ @}.
