@@ -1,3 +1,7 @@
+2005-08-12  Jan Nieuwenhuizen  <janneke@gnu.org>
+
+	* lily/lily-guile.cc (parse_symbol_list): Bugfix.
+
 2005-08-11  Jan Nieuwenhuizen  <janneke@gnu.org>
 
 	* mf/GNUmakefile (get-*-fonts): Rename from get-*-pfa.  Copy SVG
